# HyperConformal

./: .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  API_REFERENCE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_QUANTUM_LEAP_COMPLETION.md  BREAKTHROUGH_PERFORMANCE_IMPLEMENTATION_SUMMARY.md  CI_CD_CONFIGURATION.md  DEPLOYMENT_GUIDE.md  GLOBAL_DEPLOYMENT_GUIDE.md  GLOBAL_PRODUCTION_DEPLOYMENT_GUIDE.md  HIERARCHICAL_CONFORMAL_RESEARCH_PAPER.md  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE_NEW.md  QUANTUM_LEAP_COMPLETION_REPORT.md  QUANTUM_LEAP_FINAL_REPORT.md  QUANTUM_RESEARCH_COMPLETION_SUMMARY.md  README.md  TERRAGON_QUANTUM_LEAP_COMPLETION_REPORT.md  TERRAGON_QUANTUM_LEAP_FINAL_COMPLETION_REPORT.md  TERRAGON_QUANTUM_LEAP_FINAL_IMPLEMENTATION_REPORT.md  TERRAGON_QUANTUM_LEAP_FINAL_RESEARCH_PUBLICATION.md  TERRAGON_SDLC_COMPLETION_REPORT.md  TERRAGON_SDLC_FINAL_REPORT.md  TERRAGON_SDLC_REPORT.md  TESTING_STRATEGY.md  academic_statistical_validation.py  advanced_research_benchmarks.py  advanced_research_features.py  advanced_theoretical_quantum_framework.py  auto_scaling.py  autonomous_implementation.py  benchmark_final.py  benchmark_pure_python.py  benchmark_simple.py  breakthrough_performance_benchmark.py  (+51 more)
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/examples/: CMakeLists.txt  arduino_nano_33_ble.c  hierarchical_arduino_example.c
cpp/include/: hierarchical_conformal.h  hyperconformal.h
cpp/src/: hierarchical_conformal.c  hyperconformal.c
docker/: Dockerfile  docker-compose.yml  healthcheck.py
examples/: basic_usage.py  streaming_example.py
fallbacks/: numpy_fallback.py
hyperconformal/: __init__.py  adaptive_realtime.py  advanced_benchmarks.py  auto_scaling_optimizer.py  breakthrough_algorithms.py  compliance.py  conformal.py  conformal_optimized.py  cross_platform.py  distributed.py  encoders.py  federated.py  hierarchical_conformal.py  hyperconformal.py  i18n.py  localization.py  metrics.py  monitoring.py  neuromorphic.py  neuromorphic_quantum.py  optimization.py  optimizations.py  optimized.py  performance_optimizer.py  quantum.py  quantum_conformal_research.py  quantum_hdc_research.py  quantum_leap_algorithms.py  quantum_research_validation.py  security.py  security_monitor.py  streaming.py  theoretical_validation.py  utils.py
hyperconformal_env/: pyvenv.cfg
infrastructure/cost-optimization/: resource-management.yaml
infrastructure/disaster-recovery/: business-continuity.yaml
infrastructure/kubernetes/: cross-region-replication.yaml  monitoring-stack.yaml  production-deployment.yaml
infrastructure/localization/: translations.yaml
infrastructure/monitoring/: sla-tracking.yaml
infrastructure/security/: encryption-and-secrets.yaml  zero-trust-architecture.yaml
infrastructure/terraform/: compliance-framework.tf  edge-router.js  eks-clusters.tf  global-load-balancer.tf  main.tf
infrastructure/terraform/modules/eks-cluster/: main.tf
k8s/: hyperconformal-config.yaml  hyperconformal-deployment.yaml
research_output/: QUANTUM_LEAP_RESEARCH_PUBLICATION_PACKAGE.md  advanced_theoretical_analysis.json  comprehensive_benchmark_analysis.md  experimental_methodology_guide.md  formal_theoretical_proofs.tex  github_repository_guide.md  hyperconformal_research_manuscript.tex  mathematical_proofs_supplement.tex  quantum_hdc_academic_notebook.md  quantum_hdc_research_notebook.ipynb  quantum_hdc_research_report.md  quantum_hdc_research_summary.json  quantum_leap_demo_results.json  quantum_leap_final_validation_report.json  quantum_leap_research_manuscript.md  research_results.json  research_validation_report.md
research_output/benchmarks/: benchmark_summary.md  complete_benchmark_results.json
research_output/validation_demo/: validation_demo_results.json  validation_report.md
scripts/: run_tests.py
tests/: conftest.py  test_advanced_features.py  test_benchmarks.py  test_comprehensive.py  test_conformal.py  test_e2e.py  test_encoders.py  test_hyperconformal.py  test_integration.py  test_metrics.py  test_utils.py
